--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jose": "^5.9.6",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
+    "next-themes": "^0.4.4",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
