--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cookie": "^1.0.2",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.2",
     "jose": "^5.9.6",
