--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "cookie": "^1.0.2",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.2",
     "jose": "^5.9.6",
@@ -51,6 +52,7 @@
     "react-hook-form": "^7.54.2",
     "react-phone-number-input": "^3.4.11",
     "sonner": "^1.7.4",
+    "swr": "^2.3.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.19.2",
